# graphfaker

./: .gitignore  .readthedocs.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  social_graph.graphml  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: python-publish.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  requirements.txt  usage.rst
examples/: demo_graphfaker.py  example_osm_faker_visualization.py  experiment_wikidata.py  flight_demo.py  osm_network.py  sqarql.py  wikipedia_wrapper.py
graphfaker/: __init__.py  cli.py  core.py  dataset.py  enums.py  generate.py  graphfaker.py  logger.py  utils.py
graphfaker/algorithms/: ba.py  registry.py
graphfaker/fetchers/: flights.py  osm.py  wiki.py
notebook/: wikidata.ipynb
scripts/: demo_graphfaker.py  graphtest.py  osm_network.py  run_demo.py  sqarql.py  test_graph.py
tests/: __init__.py  test_cli.py  test_graph_from_source_osm.py  test_graphfaker.py
